--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "userlite-utilities",
   "main": "./lib/userlite-utilities",
-  "version": "0.1.1",
+  "version": "0.1.0",
   "description": "Atom Utilities for Userlite Developers",
   "keywords": [],
   "activationCommands": {
-    "atom-workspace": "userlite-utilities:ulURL"
+    "atom-workspace": ["userlite-utilities:ulURL","userlite-utilities:nav-current","userlite-utilities:nav-xEnd"]
   },
   "repository": "https://github.com/danseethaler/userlite-utilities",
   "license": "MIT",
