--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "atom": ">=1.0.0 <2.0.0"
     },
     "dependencies": {
-        "fs-extra": "^0.26.2"
+        "fs-extra": "^0.26.2",
+        "is-valid-path": "^0.1.1"
     }
 }
